kube-objects/monitoring/alloy.yaml

# TODO: Alloy can't read log file because lack of access to cluster files

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy
  namespace: monitoring

spec:
  selector:
    matchLabels:
      app: alloy

  template:
    metadata:
      labels:
        app: alloy

    spec:
      serviceAccountName: alloy

      containers:
        - name: alloy
          image: grafana/alloy:v1.10.2

          args:
            - "run"
            - "/etc/alloy/config.alloy"

          ports:
            - name: http
              containerPort: 12345

          volumeMounts:
            - name: config
              mountPath: /etc/alloy

            - name: varlog
              mountPath: /var/log
              readOnly: true

      volumes:
        - name: config
          configMap:
            name: alloy-config

        - name: varlog
          hostPath:
            path: /var/log
