kube-objects/monitoring/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: loki

  template:
    metadata:
      labels:
        app: loki

    spec:
      securityContext:
        fsGroup: 10001

      containers:
        - name: loki
          image: grafana/loki:3.5.5

          args:
            - "-config.file=/etc/loki/loki.yaml"

          ports:
            - containerPort: 3100

          volumeMounts:
            - name: config
              mountPath: /etc/loki

            - name: storage
              mountPath: /loki

      volumes:
        - name: config
          configMap:
            name: loki-config

        - name: storage
          persistentVolumeClaim:
            claimName: loki-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring

spec:
  type: ClusterIP

  selector:
    app: loki

  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
