kube-objects/monitoring/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:

      serviceAccountName: prometheus

      securityContext:
        fsGroup: 65534

      containers:
        - name: prometheus
          image: prom/prometheus:v3.13.2

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.external-url=/prometheus/"
          
          ports:
            - containerPort: 9090

          volumeMounts:
            - name: config
              mountPath: /etc/prometheus

            - name: storage
              mountPath: /prometheus

      volumes:
        - name: config
          configMap:
            name: prometheus-config

        - name: storage
          persistentVolumeClaim:
            claimName: prometheus-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitoring

spec:
  type: ClusterIP

  selector:
    app: prometheus

  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
