kube-objects/monitoring/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-grafana
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
    - http:

        paths:

          - path: /grafana
            pathType: Prefix

            backend:
              service:
                name: grafana
                port:
                  number: 3000
